# Rule-Based-Learning-RuleKit

./: .gitignore  LICENSE  README.md  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.sh  runtime_benchmarking.py  synthetic_data_generator.py  test_data_handler.py
data/: TCGA Pan-Cancer (PANCAN).csv  cluster_annotation_rules.txt  clustered_output - Age_less_40.csv  clustered_output - CancerType_BLCA.csv  clustered_output - Gender_Female_Age_less_50_VitalStat_Dead.csv  clustered_output - Gender_Male.csv  clustered_output - Gender_Male_Age_less_40.csv  clustered_output - VitalStatus_Dead.csv  clustered_output.csv
output/: benchmark_full_results.csv  benchmark_runtime_summary.csv
rulefetcher/: __init__.py  clusterer.py  data_handler.py  rulekit_wrapper.py
