[project]
name            = "rulefetcher"
version         = "0.1.0"
description     = "Easy clustering + RuleKit rule extraction for TCGA-like data"
readme          = "README.md"
requires-python = ">=3.9"
license         = {file = "LICENSE"}
authors         = [
  {name = "Ibne Sayad", email = "ibnsaad8772@gmail.com"},
]
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "scikit-learn-extra>=0.3",   # KModes
  "rulekit-python>=0.3",
]

[project.urls]
Homepage    = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit"
Documentation = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit#readme"
Issues      = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit/issues"

# ---- build backend -------------------------------------------------
[build-system]
requires      = ["hatchling"]        # or "setuptools>=69"
build-backend = "hatchling.build"
