[project]
name            = "rulefetcher"
version         = "0.1.0"
description     = "Easy clustering + RuleKit rule extraction for TCGA-like data"
readme          = "README.md"
requires-python = ">=3.9"
license         = {file = "LICENSE"}
authors         = [
  {name = "Ibne Sayad", email = "ibnsaad8772@gmail.com"},
]
dependencies = [
    "kmodes==0.12.1",
    "ipython==8.12.3",
    "jdk==0.0.6",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "rulekit==2.1.24.1",
    "scikit_learn==1.7.0",
]

[project.urls]
Homepage    = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit"
Documentation = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit#readme"
Issues      = "https://github.com/Ibne-Sayad/Rule-Based-Learning-RuleKit/issues"

# ---- build backend -------------------------------------------------
[build-system]
requires      = ["hatchling"]        # or "setuptools>=69"
build-backend = "hatchling.build"
